--- a/terminology.html
+++ b/terminology.html
@@ -2,7 +2,7 @@
 <html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <title>terminology.html | Accessibility Resources</title>
+  <title>Terminology | Accessibility Resources</title>
   <link rel="stylesheet" type="text/css" media="screen" href="css/stuttgartbib.css" title="default" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/meiert-qa.css" title="QA stylesheet" />
@@ -90,6 +90,8 @@
       </li>
       <li>Scope <abbr>UK</abbr>: 
         <a href="http://www.scope.org.uk/about-us/our-brand/social-model-of-disability">The social model of disability: What is it and why is it important?</a>
+        <br />See also the YouTube video
+        <a href="https://www.youtube.com/watch?v=0e24rfTZ2CQ">What is the social model of disability?</a> (3 minutes).
       </li>
       <!-- 
       <li>
@@ -299,6 +301,21 @@
         <i class="proceedings">DESIRE '11: Procedings of the Second Conference on Creativity and Innovation in Design</i>,
         <span lang="nl">Eindhoven</span>, Netherlands, 19–21 October 2011.
       </li>
+      <li>
+        <a href="http://enhancetheuk.org/enhance/">enhance the <abbr>uk</abbr></a>
+        (organisation that delivers disability awareness training).
+      </li>
+      <li>
+        <a href="https://www.disabilityrightsuk.org/">Disability Rights <abbr>UK</abbr></a>.
+      </li>
+      <li>
+        <a href="https://www.understandingdisability.org/">Differing Abilities</a>
+        (by the Spaulding Rehabilitation Network, Massachusetts, <abbr>USA</abbr>).
+      </li>
+      <li>Stella Young:
+        <a href="https://www.youtube.com/watch?v=SxrS7-I_sMQ">Inspiration porn and the objectification of disability</a>,
+        <abbr>TEDx</abbr>Sydney, 2014 (10 minutes).<!-- video available under Creative Commons licence, but YouTube does not allow downloading -->
+      </li>
     </ul>
     <p>See also <a href="https://www.understood.org/en/school-learning/partnering-with-childs-school/instructional-strategies/multisensory-instruction-what-you-need-to-know">Multisensory Instruction: What You Need to Know</a>
       by Amanda Morin.
@@ -320,6 +337,7 @@
     xml:lang="en-US" lang="en-US" rel="license"
     href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
     Attribution-ShareAlike 4.0 International License</a>.</p>
+    <p>Short <abbr>URL</abbr> to this page: <a href="http://tinyurl.com/y8n8d3au">http://tinyurl.com/y8n8d3au</a> (created 6 June 2017).
   </footer>
 </body>
 </html>
