start of Glossary

--- a/terminology.html
+++ b/terminology.html
@@ -42,6 +42,29 @@
   </nav>
 
   <main>
+    <h2>Glossary</h2>
+    <dl class="glossary">
+      <dt id="gloss-aac"><abbr>AAC</abbr></dt>
+        <dd class="definition">Augmentative and alternative communication, an umbrella term for methods and technologies 
+          (<abbr>e.g.</abbr> communication boards and speech-generating devices) that help people with a wide range of speech and language impairments 
+          to communicate with family, carers and other people.
+          (Source: <a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqSU1qSWpMVVVRejg"><cite>MOOCAP: <abbr>ICT</abbr> Accessibility Glossary</cite></a>, 
+          <abbr title="Creative Commons Attribution">CC-BY</abbr> 4.0 licence)
+        </dd>
+      <dt id="gloss-accessibility">Accessibility</dt>
+        <dd class="definition">The extent to which a product (including software, websites and documents) or service can be used by everyone, regardless of disabilities.
+          (Source: <a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqSU1qSWpMVVVRejg"><cite>MOOCAP: <abbr>ICT</abbr> Accessibility Glossary</cite></a>, 
+          <abbr title="Creative Commons Attribution">CC-BY</abbr> 4.0 licence)
+        </dd>
+      <!-- 
+      <dt id=""></dt>
+        <dd class="definition">
+          (Source: <cite></cite>, <abbr title="Creative Commons Attribution">CC-BY</abbr> licence)
+        </dd>
+        <dd class="seealso"></dd>
+      -->
+    </dl>
+
     <h2>How to Talk About (People with) Disabilities</h2>
     <ul>
       <li>Michigan Disability Rights Coalition (<abbr>MDRC</abbr>): 
