More transcripts and videos.
CC lic: interv David Caldwell, Neil Milliken; Toby Hewson: transcript;
Transcript 'Communication Aids in Practice': OER template; 'Everyday
Activities ... and ColourVisor': version with audio description.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -166,7 +166,8 @@
             <a href="https://drive.google.com/open?id=0BwcWJ_CGWdF3UkphUGUxc2RQOTQ">captions in Web<abbr>VTT</abbr> format</a>.
           </li>
           <li>
-            <a href="https://drive.google.com/open?id=0BwcWJ_CGWdF3bGxpckNmSllNLVE">Video transcript in Microsoft Word format</a>.
+            <a href="https://docs.google.com/document/d/1k23BkfDLcIw6b8t65x_TQgBOoROruxaBBBiamelftQk/view">Video transcript in Microsoft Word format</a>.
+            <!-- replaces https://drive.google.com/open?id=0BwcWJ_CGWdF3bGxpckNmSllNLVE -->
           </li>
         </ul>
       </li>
@@ -225,11 +226,13 @@
         <ul>
           <li id="fl-step-1-04">Interview with David Caldwell:
             <!-- <a href="https://drive.google.com/open?id=0B876rHn1ttslUTBZMGJYeThfZkU">Interview with David Caldwell (<abbr>MP4</abbr> video)</a>. -->
-            <a class="nocclicence" href="https://vimeo.com/202987197">Video on Vimeo</a> (no captions available).<!-- @@no captions yet -->
+            <a href="https://vimeo.com/202987197">Video on Vimeo</a> (no captions available);<!-- @@no captions yet -->
+            <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqaWl4ZUhERlRSV3c">video transcript</a>.
           </li>
           <li id="fl-step-1-05">Interview with Neil Milliken:
             <!-- <a href="https://drive.google.com/open?id=0B876rHn1ttslUzZIT0U3TjJHeFE">Interview with Neil Milliken (<abbr>MP4</abbr> video)</a>. -->
-            <a class="nocclicence" href="https://vimeo.com/203276646">Video on Vimeo</a> (no captions available).<!-- @@no captions yet -->
+            <a href="https://vimeo.com/203276646">Video on Vimeo</a> (no captions available);<!-- @@no captions yet -->
+            <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqb1pfaER5aUU3SEE">video transcript</a>.
           </li>
         </ul>
       </li>
@@ -312,7 +315,7 @@
             Because it is meant for a captioning exercise, the video has no captions.
           </li>
         </ul>
-      <li class="UOS" id="fl-step-1-15">Barriers to Communication / Using Symbols to Communicate. 
+      <li class="UOS" id="fl-step-1-15">Barriers to Communication / Using Symbols to Communicate.
         <!-- OER folder: https://drive.google.com/drive/folders/0B5w8EXu9wtOqaUtPNDVzdmFNMms @@no Assets Registry -->
         <br />© Copyright E.A. Draffan, University of Southampton, 2015.<!-- @@not proper OER; wrong template -->
         <ul>
@@ -331,13 +334,14 @@
         <br />© Copyright E.A. Draffan, University of Southampton, 2015.
         <ul>
           <li>Short interview with Toby Hewson about <abbr title="augmentative and alternative communication">AAC</abbr> devices:
-            <a href="https://vimeo.com/206079883/settings">video on Vimeo</a>,
+            <a href="https://vimeo.com/206079883">video on Vimeo</a>,
             <a href="https://drive.google.com/open?id=0BwcWJ_CGWdF3OTJJMmlUaG9EVnc">captions</a>,
-            <a href="https://drive.google.com/open?id=0BwcWJ_CGWdF3S1VZbFM4MkRJSTQ">transcript</a>.
+            <a href="https://docs.google.com/document/d/1NRrbMbmTbKycP9jIvxg3sN__Ka4-AhtSfxN0Hk_YK-E/view">transcript</a>.
+            <!-- replaces https://drive.google.com/open?id=0BwcWJ_CGWdF3S1VZbFM4MkRJSTQ -->
           </li>
           <li>
-            <a href="https://drive.google.com/open?id=0BwcWJ_CGWdF3S1VZbFM4MkRJSTQ">Video transcript &ldquo;Communication aids in practice&rdquo;</a>.
-            <br />© Copyright University of Southampton.<!-- @@not proper OER; wrong template -->
+            <a href="https://docs.google.com/document/d/1NRrbMbmTbKycP9jIvxg3sN__Ka4-AhtSfxN0Hk_YK-E/">Video transcript &ldquo;Communication aids in practice&rdquo;</a>.
+            <br />© Copyright University of Southampton.
           </li>
         </ul>
       </li>
@@ -742,8 +746,9 @@
            <!-- <a href="https://drive.google.com/open?id=0B5pduB_JZh5EZDBTM0RHYm1JYm8">Everyday Activities of People with Disabilities and the App ColourVisor (<abbr>URL</abbr> file)</a>. -->
           </li>
           <li>
-            <a href="https://www.youtube.com/watch?v=KuwNKWAK-1w">Video on YouTube</a>/
-            <a href="https://vimeo.com/198227793">video on Vimeo</a>:
+            <a href="https://www.youtube.com/watch?v=KuwNKWAK-1w">Video on YouTube</a>&nbsp;/
+            <a href="https://vimeo.com/198227793">video on Vimeo (with captions)</a>&nbsp;/
+            <a href="https://vimeo.com/223822914">video on Vimeo (with audio description)</a>:
             interview with the developer of the app, followed by a demo.
             <a href="https://drive.google.com/open?id=0B5pduB_JZh5EN08xMVNSNE81cEU">Subtitles in <abbr>VTT</abbr> format</a>.
           </li>
