Intro couse: step 2.01.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -52,8 +52,8 @@
       that were created for the online courses developed by
       the <a href="http://gpii.eu/moocap/"><abbr>MOOC</abbr> Accessibility Partnership (<abbr>MOOCAP</abbr>)</a>.
     </p>
-
-    <h2>Digital Accessibility (Introductory Course)</h2>
+    <section>
+    <h2 id="introcourse">Digital Accessibility (Introductory Course)</h2>
     <p>This section lists all the Open Educational Resources (<abbr>OERs</abbr>)
       that were created for the introductory course 
       <a href="https://www.futurelearn.com/courses/digital-accessibility">Digital Accessibility: Enabling Participation in the Information Society</a>,
@@ -372,6 +372,12 @@
 
     <h3>Enabling People to Work on Computers</h3>
     <ul>
+      <li class="DIT UP8" id="fl-step-2-01"><a href="https://drive.google.com/open?id=0B6PTy2fBpskdczB2LVRLS0lUVmM">Introduction to Accessibility and Desktop Computing</a> (OpenDocument format <abbr>ODF</abbr>);
+        <a href="https://drive.google.com/open?id=1zxCUToBgIeZ4DjSWwh1yaAwxybuGv38U88Z9-pA9LCU">video transcript</a>.
+        <br />© Copyright <span lang="fr">Dominique Archambault, Université Paris 8</span> &amp; John Gilligan, Dublin Institute of Technology, 2015.
+        (<a href="https://drive.google.com/open?id=0B6PTy2fBpskdXzMySG1MT3IxR3c">licence and acknowledgements for <abbr>ODF</abbr> file</a>,
+        <a href="https://drive.google.com/open?id=0B6PTy2fBpskdVnVJem1JQzdUdU0">licence and acknowledgements for transcript</a>)
+      </li>
       <li class="DIT UP8" id="fl-step-2-04">
         <a href="https://drive.google.com/open?id=0B6PTy2fBpskdRFhQYlRWc2FadGc">Typical Desktop Usage (Microsoft Word document)</a>
         (<a href="https://drive.google.com/drive/folders/0B6PTy2fBpskdN0dtUlpsbHZDUTA">Google Drive folder</a>).
@@ -1177,10 +1183,11 @@
         </ul>
       </li>
     </ul>
-
+    </section>
 
 
   <!-- 
+    <section>
     <h2>@@</h2>
     <ul>
       <li>
@@ -1210,14 +1217,15 @@
         </ul>
       </li>
     </ul>
+    </section>
   -->
   </main>
 
   <footer>
     <p id="licence">
     Copyright: <a href="http://gpii.eu/moocap/"><abbr>MOOC</abbr> Accessibility Partnership (<abbr>MOOCAP</abbr>)</a>, 2015-2017.
-    Licence: <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-    <img alt="Creative Commons License Attribution-ShareAlike" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
+    Licence: <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
+    <img alt="Creative Commons License Attribution" style="border-width:0" src="https://licensebuttons.net/l/by/4.0/88x31.png" />
     </a>
     </p>
   </footer>
