Inclusive Learning and Teaching: FL steps.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -1185,6 +1185,107 @@
     </ul>
     </section>
 
+  <!-- 
+    <section id="design-innovation">
+    <h2>Design Innovation: Inclusive Approaches (University of the Aegean)</h2>
+    </section>
+    <section id="mobile-apps">
+    <h2>Accessible Mobile Apps (<abbr>JKU</abbr>+<abbr>UP8</abbr>)</h2>
+    </section>
+    <section id="accessible-web">
+    <h2>Accessible Web (<abbr>JKU</abbr>+<abbr>TUD</abbr>)</h2>
+    </section>
+    <section id="ucd-for-access">
+    <h2>User-Centered Design for Accessibility (<abbr>HiAO</abbr>)</h2>
+    </section>
+    <section id="ui-personalization">
+    <h2>User Interface Personalization (<abbr>HDM</abbr>)</h2>
+    </section>
+    <section id="assistive-technologies">
+    <h2>Assistive Technologies (<abbr>UP8</abbr>+<abbr>JKU</abbr>)</h2>
+    </section>
+  -->
+    <section id="learning-teaching">
+    <h2>Inclusive Learning and Teaching (<abbr>UoS</abbr>)</h2>
+    <p>This course ran on <a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/todo/13495">FutureLearn</a>
+      from 5 till 26 June 2017.
+      In the lists below, we provide links to the individual steps in the course (on FutureLearn)
+      and the corresponding <abbr>OERs</abbr>. (Steps which have no <abbr>OERs</abbr> are not listed.)
+    </p>
+    <h3>Week 1: Creating Inclusive Learning Practices</h3>
+    <ul>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/209719">Step 1.1</a>: Why should we care about inclusive learning and teaching?</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/209720">Step 1.2</a>: Welcome to the course</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/209721">Step 1.3</a>: Join the online community: no <abbr>OER</abbr>.</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/207592">Step 1.4</a>: Creating a companion glossary</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/209722">Step 1.5</a>: Welcome to week 1.</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/201527">Step 1.6</a>: Academic perspective (video, Professor Graeme Earl).</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/201528">Step 1.7</a>: Institutional perspective (video).</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/201530">Step 1.8</a>: Student perspective (video).</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/200006">Step 1.9</a>: Inclusion, adjustments and accommodations (audio).</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/193593">Step 1.10</a>: The social model of disability 
+        (short article with a links to an 
+        <a href="https://www.scope.org.uk/about-us/our-brand/social-model-of-disability">external article</a> and a 
+        <a href="https://www.youtube.com/watch?v=0e24rfTZ2CQ">YouTube video</a>).
+      </li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/180667">Step 1.11</a>: Circles of inclusion</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/193605">Step 1.12</a>: Born accessible.</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/200418">Step 1.13</a>: Multiple formats (video).</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/200417">Step 1.14</a>: Institutional benefits of multiple formats (video).</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/200413">Step 1.15</a>: Checking for the key points to producing multiple formats (video).</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/180724">Step 1.16</a>: Exercise: make a document that can be converted into multiple formats</li>
+    </ul>
+    </ul>
+    <h3>Week 2: Developing Inclusive Learning Environments</h3>
+    <ul>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/209723">Step 2.1</a>: Welcome to week 1.</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/202821">Step 2.2</a>: Exercise: what can we do to ensure inclusive teaching practices? (audio)</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/183644">Step 2.3</a>: Can technology help us to communicate in an inclusive way? (video)</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/183845">Step 2.4</a>: Lecture capture: innovative or unwelcome technology?</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/202823">Step 2.5</a>: Meet Lars studying computer science.</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/183847">Step 2.6</a>: How do you work with your library to improve inclusivity? (video)</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/183849">Step 2.7</a>: Student reading experience (video).</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/202827">Step 2.8</a>: Meet Mary taking a statistics course.</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/190393">Step 2.9</a>: Technology making <abbr title="Science, Technology, Engineering and Mathematics">STEM</abbr> subjects inclusive</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/194282">Step 2.10</a>: Maths notation and terminology.</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/201534">Step 2.11</a>: Working in <abbr>STEM</abbr> subjects, the field and laboratories.</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/202833">Step 2.12</a>: Meet Alexander studying for a distance learning <abbr>MBA</abbr>.</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/202112">Step 2.13</a>: Creative courses and technology.</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/202113">Step 2.14</a>: Challenges of architecture.</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/202456">Step 2.15</a>: Meet Anna doing a fashion and textile design course.</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/202553">Step 2.16</a>: Reflection.</li>
+    </ul>
+    <h3>Week 3: Encouraging Inclusive Learning Opportunities</h3>
+    <ul>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/209724">Step 3.1</a>: Welcome to week 3.</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/183877">Step 3.2</a>: The pros and cons of shared learning activities (video).</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/184288">Step 3.3</a>: Social and learning technologies, now and in the future.</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/201537">Step 3.4</a>: Technology power user (video).</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/184294">Step 3.5</a>: Can we use mobile technology to support collaboration?</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/201535">Step 3.6</a>: Creating inclusive assessments (video and text).</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/202834">Step 3.7</a>: Meet Carole, a postgraduate studying History.</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/201538">Step 3.8</a>: Technology for creativity and planning (video).</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/201536">Step 3.9</a>: Using multimedia for complex subjects (video).</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/180722">Step 3.10</a>: Inclusion a buzzword or priority?</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/201539">Step 3.11</a>: Using cloud technology (video).</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/184300">Step 3.12</a>: Reflection.</li>
+      <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/210073">Step 3.13</a>: Goodbye! (No <abbr>OER</abbr>.)</li>
+    </ul>
+    </section>
+  <!-- 
+    <section id="intellectual-disability">
+    <h2>Intellectual Disability and Inclusion (<abbr>DIT</abbr>)</h2>
+    </section>
+  -->
+    <section id="accesible-documents">
+    <h2>Accessible Documents (<abbr>TUD</abbr>)</h2>
+    </section>
+  <!-- 
+    <section id="accessible-gamification">
+    <h2>Accessible Gamification (<abbr>HDM</abbr>)</h2>
+    </section>
+  -->
+
 
   <!-- 
     <section>
