Coady: Colour; Eggert: Mindset; Teach Access.

--- a/index.html
+++ b/index.html
@@ -225,6 +225,14 @@
         <a href="https://www.youtube.com/watch?v=WotJk8m4qLA"><abbr>SVG</abbr> Accessibility</a>,
         recording of a 50-minute presentation introduced by David Sloan (The Paciello Group, 9 June 2017).
       </li>
+      <li>Geri Coady:
+        <a href="https://24ways.org/2012/colour-accessibility/">Colour Accessibility</a>,
+        <i class="website">24 Way to Impress Your Friends</i>, 04.12.2012.
+      </li>
+      <li>Eric Eggert:
+        <a href="https://24ways.org/2015/the-accessibility-mindset/">The Accessibility Mindset</a>,
+        <i class="website">24 Way to Impress Your Friends</i>, 17.12.2015.
+      </li>
       <li>Music and Braille:
         <ul>
           <li>
@@ -253,6 +261,9 @@
       <li>Frederik Creemers:
         <a href="https://dev.to/_bigblind/how-to-make-your-website-accessible-to-people-who-use-a-screen-magnifier">How to Make Your Website Accessible to People Who Use a Screen Magnifier</a>,
         07.06.2017.
+      </li>
+      <li>
+        <a href="http://teachaccess.org/" hreflang="en-US">Teach Access</a>.
       </li>
       <!-- 
       <li>
