--- a/courses.html
+++ b/courses.html
@@ -59,6 +59,7 @@
         and that runs on FutureLearn.
         The first run of the course started on 17 October 2016 and ended on 20 November 2016. 
         The second run started on 6 February 2017 and ended on 12 March 2017.
+        The third run is scheduled to start on 9 October 2017.
         <br />The content on which the course is based is available as a collection of 
         Open Educational Resources (<abbr>OERs</abbr>). You can find the list on the
         <a href="http://gpii.eu/moocap/?p=793"><abbr>MOOCAP</abbr> website</a>
@@ -100,6 +101,12 @@
     <h3>Web Accessibility</h3>
     <ul>
       <li>
+        <a href="https://www.edx.org/course/introduction-web-accessibility-microsoft-dev240x">Introduction to Web Accessibility</a>
+        by Microsoft is a self-paced course hosted on edX.
+        The course consists of 5 modules, each requiring 3–4 hours of effort.
+        The first run starts in 21 July 2017.
+      </li>
+      <li>
         <a href="https://opencourses.desire2learn.com/cat/course/web-accessibility-7195/">Web Accessibility <abbr>MOOC</abbr> for Online Educators</a>
         by <a href="http://www.pcc.edu/">Portland Community College</a>, offered via Desire2Learn.
         This course ran as a 13-week course in October 1014 – January 2015 
@@ -128,8 +135,8 @@
       <li>
         <a href="https://www.canvas.net/browse/ryersonu/courses/web-access-auditing-2">Professional Web Accessibility Auditing Made Easy</a>
         is a 4-week course by Ryerson University, hosted on Canvas.
-        The previous run of the course started on 14 November and ended on 12 December 2016.
-        The next run is scheduled from 12 June till 10 July 2017.
+        The first run of the course started on 14 November and ended on 12 December 2016.
+        The second run started on 12 June and ended on 10 July 2017.
         The course requires 3–5 hours of study per week.
       </li>
       <li>
@@ -191,7 +198,7 @@
         (Disability and active ageing)
         is an 11-week course by the <span lang="es">Universidad Complutense Madrid</span> on MiriadaX
         that requires roughly 66 hours of study. It does not require previous knowledge of accessibility or disability.
-        The first run of the course will started in January 2017; the second run is scheduled from 20 March to 12 June 2017.
+        The first run of the course started in January 2017; the second run was scheduled from 20 March to 12 June 2017.
       </li>
       <li>
         <a href="https://www.futurelearn.com/courses/autism">Understanding Autism</a>
