Courses by UNED & Fundacion ONCE.

--- a/courses.html
+++ b/courses.html
@@ -237,6 +237,16 @@
 
     <h2>Other Courses</h2>
     <ul>
+      <li><span lang="es"><abbr title="Universidad Nacional de Educación a Distancia">UNED</abbr> y Fundación <abbr title="Organización Nacional de Ciegos de España">ONCE</abbr>:
+        <a href="https://iedra.uned.es/courses/UNED-ONCE/AccTIC/2017/about">Accesibilidad <abbr title="tecnologías de la información y la comunicación">TIC</abbr> en compras públicas</a></span>:
+        Spanish course on the procurement of accessible <abbr>ICT</abbr> running from 17 April till 15 October 2017.
+        The course also covers the European standard <abbr>EN</abbr> 301 549.
+      </li>
+      <li>
+        <span lang="es"><abbr title="Universidad Nacional de Educación a Distancia">UNED</abbr> y Fundación <abbr title="Organización Nacional de Ciegos de España">ONCE</abbr>:
+        <a href="http://iedra.uned.es/courses/UNED-ONCE/MatDigAcc/2017/about">Materiales digitales accesibles</a></span>:
+        Spanish course on accessible digital materials running from 20 November till 17 December 2017.
+      </li>
       <li>Courses offered by the College of Applied Health Sciences at the University of Illinois at Urbana-Champaign, April–May 2017:
         <a href="http://disability.illinois.edu/academic-support/accessible-it-group/badging" lang="en-US">Accessibility Badges Program</a>:
         <ul>
