Funka videos on EN 301 549.

--- a/courses.html
+++ b/courses.html
@@ -241,11 +241,18 @@
         <a href="https://iedra.uned.es/courses/UNED-ONCE/AccTIC/2017/about">Accesibilidad <abbr title="tecnologías de la información y la comunicación">TIC</abbr> en compras públicas</a></span>:
         Spanish course on the procurement of accessible <abbr>ICT</abbr> running from 17 April till 15 October 2017.
         The course also covers the European standard <abbr>EN</abbr> 301 549.
+        (See also the podcast
+        <a href="https://canal.uned.es/mmobj/index/id/57604" hreflang="es" lang="es">Compras <abbr>TIC</abbr> relacionadas con la Accesibilidad en la Contratación Pública en España</a>.)
       </li>
       <li>
         <span lang="es"><abbr title="Universidad Nacional de Educación a Distancia">UNED</abbr> y Fundación <abbr title="Organización Nacional de Ciegos de España">ONCE</abbr>:
         <a href="http://iedra.uned.es/courses/UNED-ONCE/MatDigAcc/2017/about">Materiales digitales accesibles</a></span>:
         Spanish course on accessible digital materials running from 20 November till 17 December 2017.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/playlist?list=PLfCFZkKjngqrnEaIymHKvsym025w0cOF3">Introduction to the <abbr>EN</abbr> 301 549</a>
+        is a YouTube playlist containing 13 videos (varying in length between 7 and 25 minutes) produced by Funka and sponsored by Microsoft.
+        The videos are available under the <a href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International licence</a> (<abbr>CC-BY-NC</abbr> 4.0).
       </li>
       <li>Courses offered by the College of Applied Health Sciences at the University of Illinois at Urbana-Champaign, April–May 2017:
         <a href="http://disability.illinois.edu/academic-support/accessible-it-group/badging" lang="en-US">Accessibility Badges Program</a>:
